2010-09-10  Tony Chang  <tony@chromium.org>

        Unreviewed, rolling out r67216.
        http://trac.webkit.org/changeset/67216
        https://bugs.webkit.org/show_bug.cgi?id=44709

        Broke

        * Scripts/webkitpy/layout_tests/deduplicate_tests.py:
        * Scripts/webkitpy/layout_tests/deduplicate_tests_unittest.py:

2010-09-10  Tony Chang  <tony@chromium.org>

        Reviewed by Ojan Vafai.

        deduplicate-tests should be runnable from any WebKit directory
        https://bugs.webkit.org/show_bug.cgi?id=44709

        * Scripts/webkitpy/layout_tests/deduplicate_tests.py:
        * Scripts/webkitpy/layout_tests/deduplicate_tests_unittest.py:

2010-09-09  Hans Wennborg  <hans@chromium.org>

        Reviewed by Jeremy Orlow.

        Hook up LayoutTestController.setMockDeviceOrientation() in Chromium DumpRenderTree.
        https://bugs.webkit.org/show_bug.cgi?id=45460

        This enables DumpRenderTree to run layout tests for DeviceOrientation.

        Also declare the LayoutTestController destructor out-of-line.
        Otherwise the implicit destructor would cause compiler errors because
        of the OwnPtr<WebKit::WebDeviceOrientationClientMock> member.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::~LayoutTestController):
        (LayoutTestController::setMockDeviceOrientation):
        (LayoutTestController::deviceOrientationClient):
        * DumpRenderTree/chromium/LayoutTestController.h:
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::deviceOrientationClient):
        * DumpRenderTree/chromium/WebViewHost.h:

2010-09-09  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r67119.
        http://trac.webkit.org/changeset/67119
        https://bugs.webkit.org/show_bug.cgi?id=45505

        Extra newlines in results (Requested by tony^work on #webkit).

        * DumpRenderTree/chromium/LayoutTestController.cpp: